input on cross attention all tokens

--- a/VIT_backbone/VIT_transformer_debug.ipynb
+++ b/VIT_backbone/VIT_transformer_debug.ipynb
@@ -1,6 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "766166cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://app.neptune.ai/oliveira/captionImageMonitoring/e/CAPTION-1\n",
+      "Remember to stop your run once you’ve finished logging your metadata (https://docs.neptune.ai/api-reference/run#.stop). It will be stopped automatically only when the notebook kernel/interactive console is terminated.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import neptune.new as neptune\n",
+    "\n",
+    "run = neptune.init(\n",
+    "    project=\"oliveira/captionImageMonitoring\",\n",
+    "    api_token=\"eyJhcGlfYWRkcmVzcyI6Imh0dHBzOi8vYXBwLm5lcHR1bmUuYWkiLCJhcGlfdXJsIjoiaHR0cHM6Ly9hcHAubmVwdHVuZS5haSIsImFwaV9rZXkiOiI2MmEyOGVhMC0xMjA1LTRhMTMtOTFkNi0wNmE5MzNhZWM4ZmUifQ==\",\n",
+    ")  # your credentials"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e1ad9264",
    "metadata": {},
@@ -10,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "f5cc29d3",
    "metadata": {},
    "outputs": [],
@@ -32,17 +56,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "efa8d912",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7ff69af73c10>"
+       "<matplotlib.image.AxesImage at 0x7f418c116e20>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -68,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "1bc8f0f0",
    "metadata": {},
    "outputs": [
@@ -78,7 +102,7 @@
        "torch.Size([1, 3, 224, 224])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "66143ada",
    "metadata": {},
    "outputs": [
@@ -123,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "6c440b81",
    "metadata": {},
    "outputs": [
@@ -133,7 +157,7 @@
        "\"\\n# a grayscale image (of shape height x width)\\n>>> image = np.random.randn(30, 40)\\n\\n# change it to RGB format by repeating in each channel\\n>>> repeat(image, 'h w -> h w c', c=3).shape\\n(30, 40, 3)\\n\""
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "id": "2daefbd9",
    "metadata": {},
    "outputs": [
@@ -212,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "id": "d2b54066",
    "metadata": {},
    "outputs": [],
@@ -225,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "id": "5a53996d",
    "metadata": {},
    "outputs": [
@@ -235,7 +259,7 @@
        "dict_keys(['patch_size', 'emb_size', 'img_size', 'num_heads', 'dropout', 'expansion_embbeding', 'depth', 'n_classes', 'in_channels', 'emb_size_multi_head_attention'])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
